2011-04-19  Shujing Zhao  <pearly.zhao@oracle.com>

	* cmd/dtrace.c: Don't include libproc.h.
	* makefile: Fix.
	* libdtrace/dt_proc.c: Rmove dt_proc_bpmatch.
	* libproc/common/Pcore.c: Remove note_lwpstatus, note_lwpsinfo and
	  lwpid2info.
	* libproc/common/Pcontrol.c: Remove the part about agentcnt.
	* libproc/common/Pidle.c, Pscantext.c, Psyscall.c: Removed.
	* libproc/common/makefile: Fix.
	* uts/common/sys/ccompile.h, time_std_impl.h: Removed.

2011-04-13  Shujing Zhao  <pearly.zhao@oracle.com>

	Remove librtld.
	* makefile: Adjust.
	* libdtrace/dt_open.c, dt_proc.c: Fix.
	* libproc/common/Psymtab.c, Psymtab_machelf32.c: Fix. 

2011-04-06  Shujing Zhao  <pearly.zhao@oracle.com>

	* cmd/dtrace.c: clear function prochandler.
	* include/sys/regset.h: Don't include privregs.h.
	* libdtrace/dt_proc.c: Remove to get infor from Ppsinfo.
	libproc/common
	* P32ton.c: Remove the functions about lwp.
	* Pcontrol.c: Remove the functions about lwp-specific operation.
	* Pservice.c: Likewise.
	* Pstack.c: Likewise.
	* Plwpregs.c: Delete.
	* proc_arg.c: Delete.
	* proc_get_info.c: Delete.
	* proc_names.c: Delete.
	* proc_set.c: Delete.
	* proc_stdio.c: Delete.
	* libproc.h: Delete.
	* makefile: Fixed.
	
2011-03-30  Shujing Zhao  <pearly.zhao@oracle.com>
	
	* include/sys/link.h: Include system link.h and remove the conflict
	definitions.
	* librtld/rd_elf.c, rtld.h: Fixed.

2011-03-30  Shujing Zhao  <pearly.zhao@oracle.com>

	Clean the header files.
	include/
	* confname_add.h, door.h, ieeefp.h, objfs.h, param.h, priv.h, procfs.h,
	  types_blk.h, types_boolean.h, types_dev.h, types_lmid.h, types_off.h,
	  types_pad.h, types_posix.h, types_time.h, zmod.h, zone.h, sys/fp.h,
	  sys/old_procfs.h: Removed and moved the useful definitions to
	types_various.h. Change the files that include these files.
	* sys/types.h: Added.
	* types_various.h: Added definitions. 
	
	cmd/
	* dtrace.c, makefile: Move to the parent directory.
	
	libproc/
	* common/Pgcore.c: Removed.